kubernetes-networks/canary/web-canary-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      version: v2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      name: web
      labels:
        app: web
        version: v2
    spec:
      containers:
        - name: web
          image: loktionovam/web-python:latest
          volumeMounts:
            - name: app
              mountPath: /app
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
          livenessProbe:
            tcpSocket:
              port: 8000
      volumes:
        - name: app
          emptyDir: {}
