kubernetes-networks/canary/web-canary-svc-headless.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc-v2
spec:
  selector:
    app: web-v2
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
