kubernetes-networks/canary/web-canary-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: web-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: Canary
spec:
  rules:
    # Use host based routing here, due to error
    # 'cannot merge alternative backend
    # default-web-svc-v2-8000 into hostname  that does not exist'
    - host: web
      http:
        paths:
          - path: /web
            backend:
              serviceName: web-svc-v2
              servicePort: 8000
