kubernetes-networks/canary/web-prod-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    # Use host based routing here, due to error
    # 'cannot merge alternative backend
    # default-web-svc-v2-8000 into hostname  that does not exist'
    - host: web
      http:
        paths:
          - path: /web
            backend:
              serviceName: web-svc
              servicePort: 8000
